--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                 </li>
             </ul>
             <p class="copyright">
-            Copyright &copy; 2015<br>
-            Created by Front Range Community College Students: Miriam Leon, Jessica Broumpton, & Michael Dryburgh
+            Copyright &copy; 2016<br>
+            Created by Front Range Community College Students: Miriam Leon, Danielle Young, Michael Dryburgh, Anna Marie Sellars, Pamela Willis-Tozier 
             </p>
     	</footer>
         
@@ -232,15 +232,5 @@
         
         <script src="scripts/plugins.js"></script>
         <script type="text/javascript" src="scripts/main.js"></script>
-        <script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-		
-		  ga('create', 'UA-62452409-1', 'auto');
-		  ga('send', 'pageview');
-		
-		</script>
 	</body>
 </html>
