Added files via upload
Added team names, changed copyright date, changed nav to reflect programs.php instead of .html.

--- a/faculty.html
+++ b/faculty.html
@@ -11,7 +11,7 @@
 		<!--A short description about the holistic website-->
 		<meta name="description" content="Welcome to the Front Range Multimedia Graphic Design (MGD) department. Here you can learn more about programs offered, the MGD Faculty, and much more!">
 		<!--Who did this thing?!-->
-		<meta name="author" content="Miriam Leon, Jessica Broumpton, & Michael Dryburgh">
+		<meta name="author" content="Miriam Leon, Danielle Arrick-Young, Michael Dryburgh, Anna Marie Sellars, Pamela Willis-Tozier">
 		<meta name="keywords" content="Multimedia, Graphic, Design, Front, Range, Community, College, Westminster, Boulder, Fort Collins, Brighton, web, animation, video, photoshop, illustrator, flash, technology">
 		<!--Don't cache me in-->
 		<meta http-equiv="pragma" content="no-cache">
@@ -55,7 +55,7 @@
         <nav class="mainNav" role="navigation">
             <ul class="menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="programs.html">Programs</a></li>
+                <li><a href="programs.php">Programs</a></li>
                 <li><a href="gallery.html">Student Work</a></li>
                 <li><a href="faculty.html">Faculty Info</a></li>
                 <li><a href="lab.html">Lab Times</a></li>
@@ -236,8 +236,8 @@
                 </li>
             </ul>
             <p class="copyright">
-            Copyright &copy; 2015<br>
-            Created by Front Range Community College Students: Miriam Leon, Jessica Broumpton, & Michael Dryburgh
+            Copyright &copy; 2016<br>
+            Created by Front Range Community College Students: Miriam Leon, Danielle Arrick-Young, Michael Dryburgh, Anna Marie Sellars, Pamela Willis-Tozier
             </p>
     	</footer>
         
@@ -249,7 +249,7 @@
         <nav class="mobileNav">
             <ul class="mobileMenu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="programs.html">Programs</a></li>
+                <li><a href="programs.php">Programs</a></li>
                 <li><a href="gallery.html">Student Work</a></li>
                 <li><a href="faculty.html">Faculty Info</a></li>
                 <li><a href="lab.html">Lab Times</a></li>
