--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,7 @@
 		<!--A short description about the holistic website-->
 		<meta name="description" content="Welcome to the Front Range Multimedia Graphic Design (MGD) department. Here you can learn more about programs offered, the MGD Faculty, and much more!">
 		<!--Who did this thing?!-->
-		<meta name="author" content="Miriam Leon, Jessica Broumpton, & Michael Dryburgh">
+		<meta name="author" content="Miriam Leon, Danielle Arrick-Young, Michael Dryburgh, Anna Marie Sellars, Pamela Willis-Tozier">
 		<meta name="keywords" content="Multimedia, Graphic, Design, Front, Range, Community, College, Westminster, Boulder, Fort Collins, Brighton, web, animation, video, photoshop, illustrator, flash, technology">
 		<!--Don't cache me in-->
 		<meta http-equiv="pragma" content="no-cache">
@@ -21,6 +21,7 @@
 		<link rel="author" href="humans.txt">
 		<!--Call stylesheets here-->        		
 		<link href="styles/main.css" rel="stylesheet" type="text/css">
+		<link href="styles/slideshow.css" rel="stylesheet" type="text/css">
 		<!--This is the only javaScript that should be in the <head> tag. All other calls should be placed right before the closing </body> tag.-->
 		<script src="scripts/vendor/modernizr-2.6.2.min.js"></script>
 	</head>
@@ -55,7 +56,7 @@
         <nav class="mainNav" role="navigation">
             <ul class="menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="programs.html">Programs</a></li>
+                <li><a href="programs.php">Programs</a></li>
                 <li><a href="gallery.html">Student Work</a></li>
                 <li><a href="faculty.html">Faculty Info</a></li>
                 <li><a href="lab.html">Lab Times</a></li>
@@ -117,8 +118,8 @@
                 </li>
             </ul>
             <p class="copyright">
-            Copyright &copy; 2015<br>
-            Created by Front Range Community College Students: Miriam Leon, Jessica Broumpton, & Michael Dryburgh
+            Copyright &copy; 2016<br>
+            Created by Front Range Community College Students: Miriam Leon, Danielle Arrick-Young, Michael Dryburgh, Anna Marie Sellars, Pamela Willis-Tozier
             </p>
     	</footer>
         
@@ -130,7 +131,7 @@
         <nav class="mobileNav">
             <ul class="mobileMenu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="programs.html">Programs</a></li>
+                <li><a href="programs.php">Programs</a></li>
                 <li><a href="gallery.html">Student Work</a></li>
                 <li><a href="faculty.html">Faculty Info</a></li>
                 <li><a href="lab.html">Lab Times</a></li>
@@ -153,6 +154,7 @@
 
 		<script src="scripts/plugins.js"></script>
         <script type="text/javascript" src="scripts/main.js"></script>
+		<script type="text/javascript" src="scripts/slideshow.js"></script>
         
         <script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
